# dashy-dude-game

./: .gitignore  GAME_SUMMARY.md  NEXT_IMPROVEMENTS.md  NEXT_IMPROVEMENTS_2.md  README.md  WEB_DEPLOYMENT.md  achievements.json  high_scores.json  main.py  pyproject.toml  run_game.py
.github/workflows/: deploy.yml
data/: achievements.json  high_scores.json
mobile/: MOBILE_DEPLOYMENT.md  README.md  briefcase.toml  main_mobile.py
mobile/assets/icons/: README.md
mobile/config/: __init__.py  mobile_constants.py  touch_controls.py
mobile/ios/: Info.plist
mobile/scripts/: build_ios.sh  setup_toolchain.sh
plans/: game_architecture.md  implementation_guide.md  improvement_plan.md  quick_reference.md  system_diagram.md
src/: __init__.py  game.py
src/entities/: collectible.py  platform.py  player.py
src/graphics/: background.py  particles.py  sprite_generator.py  ui.py
src/states/: achievements_state.py  base_state.py  customization_state.py  play_state.py  settings_state.py  statistics_state.py  title_state.py
src/systems/: achievements.py  animation.py  audio.py  camera.py  customization.py  input.py  physics.py  save_system.py
src/utils/: analytics.py  constants.py  math_utils.py
src/world/: collectible_spawner.py  difficulty_manager.py  platform_generator.py
