[project]
name = "dashy-dude"
version = "1.0.0"
description = "A polished endless runner platformer game with helicopter glide mechanics"
requires-python = ">=3.11"
dependencies = [
    "pygame-ce>=2.4.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
web = [
    "pygbag>=0.9.2",
]

[tool.uv]
# UV will use the Python version specified in .python-version

[project.scripts]
game = "main:main"